<resources>
    <string name="app_name">To Do List</string>
    <string name="tasks">tasks</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add new Task</string>
    <string name="this_is_title">This is Title</string>
    <string name="task_details">Task Description</string>
    <string name="select_time">Select time</string>
    <string name="save_changes">Save Changes</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="ligth">Ligth</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="modes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>